log/build_2023-02-17_13-53-46/turtle_bot_15/stdout_stderr.log
running egg_info
writing ../../build/turtle_bot_15/turtle_bot_15.egg-info/PKG-INFO
writing dependency_links to ../../build/turtle_bot_15/turtle_bot_15.egg-info/dependency_links.txt
writing entry points to ../../build/turtle_bot_15/turtle_bot_15.egg-info/entry_points.txt
writing requirements to ../../build/turtle_bot_15/turtle_bot_15.egg-info/requires.txt
writing top-level names to ../../build/turtle_bot_15/turtle_bot_15.egg-info/top_level.txt
reading manifest file '../../build/turtle_bot_15/turtle_bot_15.egg-info/SOURCES.txt'
writing manifest file '../../build/turtle_bot_15/turtle_bot_15.egg-info/SOURCES.txt'
running build
running build_py
copying turtle_bot_15/turtle_bot_interface.py -> /home/robotica/taller1_grupo15/build/turtle_bot_15/build/lib/turtle_bot_15
running install
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
running install_lib
copying /home/robotica/taller1_grupo15/build/turtle_bot_15/build/lib/turtle_bot_15/turtle_bot_interface.py -> /home/robotica/taller1_grupo15/install/turtle_bot_15/lib/python3.10/site-packages/turtle_bot_15
byte-compiling /home/robotica/taller1_grupo15/install/turtle_bot_15/lib/python3.10/site-packages/turtle_bot_15/turtle_bot_interface.py to turtle_bot_interface.cpython-310.pyc
  File "/home/robotica/taller1_grupo15/install/turtle_bot_15/lib/python3.10/site-packages/turtle_bot_15/turtle_bot_interface.py", line 24
    rclpy::init(args=args)
          ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/robotica/taller1_grupo15/install/turtle_bot_15/lib/python3.10/site-packages/turtle_bot_15-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/turtle_bot_15/turtle_bot_15.egg-info to /home/robotica/taller1_grupo15/install/turtle_bot_15/lib/python3.10/site-packages/turtle_bot_15-0.0.0-py3.10.egg-info
running install_scripts
Installing listener script to /home/robotica/taller1_grupo15/install/turtle_bot_15/lib/turtle_bot_15
Installing talker script to /home/robotica/taller1_grupo15/install/turtle_bot_15/lib/turtle_bot_15
writing list of installed files to '/home/robotica/taller1_grupo15/build/turtle_bot_15/install.log'
